syntax = "proto3";

package proto_common;

enum TreatmentState {
    PLANNED = 0;
    DONE = 1;
    UNKNOWN = 255;
}

